--- a/mysite/index.html
+++ b/mysite/index.html
@@ -1,9 +1,9 @@
-htm<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Hello coursera!</title>
 </head>
 <body>
-<h1>Hello Cousera!</h1>
+<h1>Hello Cousera! how are you?</h1>
 </body>
 </html>
